--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,12 @@
+/* Add this in your CSS file or Tailwind CSS setup */
+@import url('https://fonts.googleapis.com/css2?family=Times+New+Roman&display=swap');
+
+@layer base {
+    body {
+        font-family: 'Times New Roman', serif;
+    }
+}
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
